Bug fixes: * Not null checking when setting hostname * Calling index.html for fql and consoles * Passing hostname in docker-compose.yml * Fixed scrollbar in tiles

--- a/foxtrot-server/src/main/resources/console/css/foxtrot.css
+++ b/foxtrot-server/src/main/resources/console/css/foxtrot.css
@@ -43,8 +43,8 @@ h1 {
   border-radius: 2px;
   background-color: #ffffff;
   resize: both;
-  overflow: auto;
-  /*color: #ffffff;
+  /*overflow: auto;
+  color: #ffffff;
   font-size: 18px;
   font-weight: 400;*/
   padding: 5px;
